[Alli-5705] Fix advanced search link button spacing (#1169)

--- a/themes/finna2/less/finna/searchbox.less
+++ b/themes/finna2/less/finna/searchbox.less
@@ -12,7 +12,7 @@
       font-size: 1em;
       font-weight: normal;
       line-height: 25px;
-      margin-top: 0;
+      margin-top: 1em;
       padding: 0px 5px;
       overflow: hidden;
       text-transform: none;
